Moving some files around

--- a/examples/config.json
+++ b/examples/config.json
@@ -4,7 +4,7 @@
   , "transition": "slide"
   , "sections": [
       {"section":"cover"}
-    , {"section":"capabilities"}
+    , {"section":"presentation"}
   ]
 }
 
